# estudo-gettext

./: Makefile  README.md  pyproject.toml
example/: main.py
example/locale/en_US/LC_MESSAGES/: example.mo  example.po
example/locale/pot/: example.pot  translation_base.pot
example/locale/pt_BR/LC_MESSAGES/: example.mo  example.po
