[tool.poetry]
name = "gtranslate"
version = "0.1.0"
description = "Study - internationalization (i18n) and localization (l10n)"
authors = ["gladson <gladsonbrito@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.5"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
ipdb = "^0.13.5"
flake8 = "^3.8.4"
black = "^20.8b1"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
